--- a/style.css
+++ b/style.css
@@ -67,6 +67,9 @@ body {
   box-shadow: 12px 12px 0px rgba(0, 0, 0, 0.1);
   position: relative;
   margin-bottom: 4rem;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
 }
 
 .hero-box::before {
@@ -108,6 +111,12 @@ h1 {
   font-weight: 500;
 }
 
+.title-container {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
 /* --- SEARCH --- */
 .search-container {
   margin-bottom: 3rem;
@@ -138,6 +147,8 @@ input#search {
   overflow: hidden;
   transition: var(--transition);
   box-shadow: 8px 8px 0px var(--black);
+  display: flex;
+  flex-direction: column;
 }
 
 .card:hover {
@@ -154,6 +165,9 @@ input#search {
 
 .card-body {
   padding: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  flex-grow: 1;
 }
 .card-title {
   font-weight: 800;
@@ -176,6 +190,7 @@ input#search {
   font-weight: 800;
   cursor: pointer;
   transition: 0.2s;
+  margin-top: auto;
 }
 .btn-detail:hover {
   background: var(--second);
