--- a/style.css
+++ b/style.css
@@ -1,7 +1,6 @@
 :root {
-  --bg-blue: #ffffff;
-  --primary: #1da8cd;
-  --second: #0295c3;
+  --primary: #0f0f0f;
+  --second: #f4f4f4;
   --white: #ffffff;
   --black: #000000;
   --gray-border: #e2e8f0;
@@ -16,7 +15,7 @@
 
 body {
   font-family: "Plus Jakarta Sans", sans-serif;
-  background-color: var(--bg-blue);
+  background-color: var(--bg-white);
   color: var(--black);
   overflow-x: hidden;
   min-height: 100vh;
@@ -44,7 +43,8 @@ body {
 
 .btn-lang {
   background: var(--primary);
-  border: 2px solid var(--black);
+  color: var(--white);
+  border: 2px solid var(--second);
   padding: 0.5rem 1.2rem;
   border-radius: 50px;
   font-weight: 700;
@@ -54,7 +54,7 @@ body {
 
 .btn-lang:active {
   transform: translate(2px, 2px);
-  box-shadow: 2px 2px 0px var(--black);
+  box-shadow: 2px 2px 0px var(--second);
 }
 
 /* --- HERO BOX (Ref: White box in image) --- */
@@ -184,7 +184,7 @@ input#search {
 .btn-detail {
   width: 100%;
   padding: 0.8rem;
-  background: var(--primary);
+  background: var(--white);
   border: 2px solid var(--black);
   border-radius: 12px;
   font-weight: 800;
@@ -205,7 +205,7 @@ input#search {
   left: 0;
   width: 100%;
   height: 100%;
-  background: #0296c354;
+  background: #00000070;
   backdrop-filter: blur(8px);
   align-items: center;
   justify-content: center;
